# Robotic_prac3

hw_robot_description/: CMakeLists.txt  package.xml
hw_robot_description/config/: gz_bridge.yaml
hw_robot_description/launch/: display.launch.py  gazebo.launch.py  localization.launch.py
hw_robot_description/scripts/: gym_gazebo_env.py
hw_robot_description/src/description/: robot.urdf
hw_robot_description/world/: depot.sdf
